# toy-rasterizer

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  mat4.h  raster.h  vec.h  window.h
